src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTBindableUniform_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTBindableUniform_StringErrorContext.class */
public final class EXTBindableUniform_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glUniformBufferEXT(III)V", "net/labymod/core/laby3d/opengl/error/generated/EXTBindableUniformErrorContext");
        methods.put("glGetUniformBufferSizeEXT(II)I", "net/labymod/core/laby3d/opengl/error/generated/EXTBindableUniformErrorContext");
        methods.put("glGetUniformOffsetEXT(II)J", "net/labymod/core/laby3d/opengl/error/generated/EXTBindableUniformErrorContext");
        return methods;
    }
}
